--- a/cliente/package.json
+++ b/cliente/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "mysql": "^2.18.1",
     "vue": "^2.7.14",
+    "vue-bootstrap-icons": "^0.2.4",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
